2007-07-20 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 411: Applied AVT patch from Seemant Kulleen
	
2007-07-11 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 410: execute a "SLOW_DOWN" only if the ROM read or write fails,
	           not everytime. This makes much more sense and also makes
		   applications much faster (example: coriander starts in
		   0.5 seconds instead of 3 seconds). The SLOW_DOWN thing
		   could maybe be removed entirely. Thanks to Tony Hague for
		   spotting this very hairy bug.

2007-07-08 David Moore  <dcm@acm.org>
	* SVN 409: Better socket cleanup in Mac OS capture code (from
	           Simon Andersson). 

2007-07-07 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 408: Applied the AVT patch from Mark Munte (with small extra
	           cosmetic changes)

2007-06-24 David Moore  <dcm@acm.org>
	* SVN 407: Applied modified version of Kristian Høgsberg's patch to
	           bring Juju support up to date with kernel 2.6.22.

2007-06-19 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 406: added missing checksum.c/h. Thanks to Robert Harle.
	* SVN 405: - update feature detection rules. Explanation written in
	             control.c.
	           - Member one_push renamed to one_push_capable as it is a
		     capability.
		   - Fixed typo in error message

2007-06-18 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 404: fixed missing * in dc1394_format7_get_byte_per_packet
	           (thanks to Stian Skjelstad)

2007-06-14 Mikael Olenfalk <mikael.olenfalk@gmail.com>
	* SVN 403: Damien forgot to add the new files...
	* SVN 402: - added Basler Smart Feature Framework support
	           - vendor/basler.[ch]: the entry functions for Basler SFF
	             support
	           - vendor/basler_sff.h: types used for SFF
	           - vendor/basler_sff_registry.[ch]: internal functions and
     	             types for implemented SFF functionality
